--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
     "@better-scroll/pull-up": "^2.0.0-beta.6",
     "axios": "^0.19.2",
     "core-js": "^3.6.4",
+    "fastclick": "^1.0.6",
+    "postcss-px-to-viewport": "^1.1.1",
     "swiper": "^5.3.7",
     "vue": "^2.6.11",
     "vue-awesome-swiper": "^4.1.0",
+    "vue-lazyload": "^1.3.3",
     "vue-router": "^3.1.6",
     "vuex": "^3.3.0"
   },
